# sgp-v4

./: .dockerignore  .eslintrc.json  .gitignore  ANALISE_MIGRACAO_HTTP_PARA_RUST.md  BACKEND_WEBSOCKET_IMPLEMENTATION.md  COMMANDS.md  COMO_TESTAR_UPDATER.md  CONTRIBUTING.md  CORRECOES_SEGURANCA.md  DATABASE_FALLBACK_README.md  DOCKER.md  DOCUMENTACAO_COMPLETA.md  ENDPOINTS_BACKEND_NECESSARIOS.md  ESTRATEGIA_RESPONSIVIDADE_TABELA.md  EXPLICACAO_DIFERENCA_DATA_ENTRADA_ENTREGA.txt  FICHA_DE_SERVICO_README.md  FUNCIONALIDADES_SISTEMA.md  GUIA_CHANGELOG.md  IMPLEMENTACAO_BROADCAST_PEDIDOS.md  INSTALACAO.md  INSTALACAO_WINDOWS.md  LOG.md  MELHORIAS_INTERFACE.md  MELHORIAS_PROJETO.md  MIGRACAO_UI_PROGRESS.md  MIGRATIONS_SYSTEM_README.md  PLANO_REDEFINICAO_FICHAS.md  README.md  REFACTORING_FILES.md  RELATORIO_INTEGRACAO.md  RELEASE.md  RESUMO_MELHORIAS.md  SETUP_GUIDE.md  STATUS_FINAL.md  TEMPLATE_BACKEND_VARIABLES.md  TEMPLATE_IMPROVEMENTS.md  TESTES_README.md  TESTE_CHANGELOG.md  TROUBLESHOOTING_REDE.md  WEBSOCKET_ERRORS_EXPLAINED.md  (+31 more)
src-tauri/: .env.example  .env.migrate  ANALYSIS_MANY_CLIENTS.md  BUG_FIX_MIGRATIONS.md  BUG_FIX_SUMMARY.md  Cargo.toml  DATABASE_SERVER_SETUP.md  DEBUG_FRONTEND_NOT_UPDATING.md  DEVTOOLS_WINDOWS_GUIDE.md  FRONTEND_LISTENER_WORKING.tsx  FRONTEND_UPDATER_EXAMPLE.tsx  GlobalNotificationManager.ts  GlobalNotificationManager.tsx  HOW_MIGRATIONS_WORK.md  IMPLEMENTATION_COMPLETE.md  LOGGING_SYSTEM_GUIDE.md  MANUAL_UPDATER_GUIDE.md  MANUAL_UPDATER_SUMMARY.md  MIGRATION_FLOW_DIAGRAM.md  MIGRATION_IMPROVEMENTS.md  MIGRATION_SUMMARY.md  NOTIFICATIONS_FLOW_DIAGRAM.md  NOTIFICATIONS_REFACTOR_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  POLLING_SYSTEM_COMPLETE.md  PRODUCTION_GUIDE.md  PRODUCTION_READY.md  REACT_POLLING_EXAMPLE.tsx  REAL_TIME_LOG_EXAMPLE.md  REFACTORING_COMPLETE.md  SIMPLE_NOTIFICATIONS_SOLUTION.md  SIMULATION_RESULTS.md  SINGLE_CLIENT_SOLUTION.md  STABLE_CONNECTIONS_SOLUTION.md  TAURI_UPDATER_GUIDE.md  UPDATER_FIXES.md  UPDATER_FIX_MINISIGN.md  UPDATER_STATUS.md  apply_migrations.bat  apply_migrations.sh  (+39 more)
src-tauri/.cargo/: config.toml
src-tauri/.sqlx/: offline.json  query-1.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20241019000100_init.sql  20241019000200_admin_tables.sql  20241019000300_add_forma_envio.sql  20241019000400_add_estado_cliente.sql  20241019000500_add_forma_pagamento.sql  20241019000600_add_pronto_column.sql  20241019000700_add_order_items_fields.sql  20241020000100_expand_order_item_image_to_text.sql  20241020000200_add_order_items_emenda.sql  (+9 more)
(+419 files in other folders)
