[package]
name = "sgp-v4"
version = "1.0.0"
description = "Sistema de Gerenciamento de Pedidos"
authors = ["SGP Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = "2.0"

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
