[package]
name = "sgp-v4"
version = "1.0.0"
description = "Sistema de Gerenciamento de Pedidos"
authors = ["SGP Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["time"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
image = { version = "0.24", features = ["jpeg", "png"] }
base64 = "0.21"
infer = "0.13"

[features]
custom-protocol = ["tauri/custom-protocol"]
