[package]
name = "sgp-v4"
version = "1.0.18"
description = "Sistema de Gerenciamento de Pedidos"
authors = ["SGP Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2.5"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["time"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
image = { version = "0.24", features = ["jpeg", "png"] }
base64 = "0.21"
infer = "0.13"
headless_chrome = "1.0"
handlebars = "5.1"
urlencoding = "2.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
